# scopehal-pico-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/ps6000d/: CMakeLists.txt  PicoSCPIServer.cpp  PicoSCPIServer.h  README.md  ScpiServerThread.cpp  WaveformServerThread.cpp  main.cpp  ps6000d.h
